Fix board overflow issues and weird card animations

--- a/resources/scss/components/_board.scss
+++ b/resources/scss/components/_board.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   height: 100%;
   justify-content: flex-start;
+  overflow: hidden;
   padding-bottom: 36px;
   padding-top: 36px;
   width: 100%;
