--- a/resources/scss/components/_card.scss
+++ b/resources/scss/components/_card.scss
@@ -13,7 +13,6 @@
   display: flex;
   flex-shrink: 0;
   position: relative;
-  transition: margin-bottom 0.3s ease;
   transform: translateZ(-1px);
 
   &--hearts,
